[package]
name = "astroport-liquidity-helper"
version = "0.1.0"
authors = ["Sturdy <sturdy@apollo.farm>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-asset = { git = "https://github.com/apollodao/cw-asset", rev = "5e51773da42ef82faa67576454e8c4b0971097f2", features = ["astroport"] }
cw-dex = { git = "https://github.com/apollodao/cw-dex", rev = "de7394fdbc74a3401f4227f81389413991b309e3", features = ["astroport"] }
cw-bigint = { git = "https://github.com/apollodao/cw-bigint", rev = "c2217a76b08cb65204db407f661298c48b01e763" }
apollo-utils = { git = "https://github.com/apollodao/apollo-utils", rev = "dd3da52653d3dc350b20b46f363ebcfdcd64aa27" }
cw20 = "0.16"

[dev-dependencies]
cw-multi-test = "0.15.1"
osmosis-testing = { git = "https://github.com/apollodao/osmosis-rust.git", rev = "52ca8eaa4b2926fea01a68f4d7e7253ad29d88b3" }
cw-it = { path = "../cw-it", features = ["astroport"] }
# cw-it = { path = "../cw-it", features = ["astroport"] }
astroport = { git = "https://github.com/apollodao/astroport", rev = "3d1793e6936ca03d8a58c51bbc2611a19566e82a" }
env_logger = "0.9.0"
